# pbrisbin.com

./: .gitignore  .mdlrc  LICENSE  Main.hs  Makefile  README.md  _config.yml  archives.html  circle.yml  deploy.sh  index.html  main.hs  package.yaml  site.cabal  stack.yaml
.circleci/: config.yml
.github/workflows/: deploy.yaml
_drafts/: monoids.md  regular_expression_evaluation_via_finite_automata.lhs
_includes/: post_summary.html
_layouts/: default.html  feed.xml  post.html  tag_index.html
_plugins/: feed_gen.rb  pandoc_converter.rb  tag_gen.rb  tag_generator.rb
_posts/: 2009-12-05-aurget.md  2009-12-05-display_manager.md  2009-12-05-downgrade.md  2009-12-05-dvdcopy.md  2009-12-05-goodsong.md  2009-12-05-mutt_gmail_offlineimap.md  2009-12-05-screen_tricks.md  2009-12-05-text_from_cli.md  2009-12-05-two_accounts_in_mutt.md  2009-12-05-wifi_pipe.md  2009-12-05-xmonad_statusbars.md  2009-12-05-xmonads_im_layout.md  2010-01-03-backups.md  2010-01-12-automounting.md  2010-03-20-irssi.md  2010-04-08-controlling_mplayer.md  2010-04-10-xmonad_scratchpad.md  2010-05-01-htpc.md  2010-05-09-maptoggle.md  2010-05-28-raw_audio.md  2010-06-14-scratchpad_everything.md  2010-07-26-web_preview.md  2010-08-15-rss_reader.md  2010-08-31-xmonad_modules.md  2010-10-02-php_authentication.md  2010-10-10-site_migration.md  2010-11-07-vim_registers.md  2010-12-11-android_receiver.md  2011-01-09-posts_database.md  2011-01-29-ajax.md  2011-02-28-hackday.md  2011-03-25-landlord_reviews.md  2011-03-26-notes.md  2011-04-09-lazy_haskell.md  2011-04-29-anatomy_of_a_yesod_application.md  2011-06-02-forks_and_children.md  2011-06-11-pacprune.md  2011-07-03-mairix.md  2011-07-08-comments.md  2011-09-10-lighttpd_reverse_proxy.md  (+52 more)
app/: Main.hs
css/: main.css  syntax.css
feed/: index.xml
posts/: 2009-12-05-aurget.md  2009-12-05-display_manager.md  2009-12-05-downgrade.md  2009-12-05-dvdcopy.md  2009-12-05-goodsong.md  2009-12-05-mutt_gmail_offlineimap.md  2009-12-05-screen_tricks.md  2009-12-05-text_from_cli.md  2009-12-05-two_accounts_in_mutt.md  2009-12-05-wifi_pipe.md  2009-12-05-xmonad_statusbars.md  2009-12-05-xmonads_im_layout.md  2010-01-03-backups.md  2010-01-12-automounting.md  2010-03-20-irssi.md  2010-04-08-controlling_mplayer.md  2010-04-10-xmonad_scratchpad.md  2010-05-01-htpc.md  2010-05-09-maptoggle.md  2010-05-28-raw_audio.md  2010-06-14-scratchpad_everything.md  2010-07-26-web_preview.md  2010-08-15-rss_reader.md  2010-08-31-xmonad_modules.md  2010-10-02-php_authentication.md  2010-10-10-site_migration.md  2010-11-07-vim_registers.md  2010-12-11-android_receiver.md  2011-01-09-posts_database.md  2011-01-29-ajax.md  2011-02-28-hackday.md  2011-03-25-landlord_reviews.md  2011-03-26-notes.md  2011-04-09-lazy_haskell.md  2011-04-29-anatomy_of_a_yesod_application.md  2011-06-02-forks_and_children.md  2011-06-11-pacprune.md  2011-07-03-mairix.md  2011-07-08-comments.md  2011-09-10-lighttpd_reverse_proxy.md  (+62 more)
src/: IndexedRoute.hs  Navigation.hs
src/Site/: IndexedRoute.hs  Navigation.hs
templates/: archives.html  default.html  feed.xml  index.html  post.html  tag.html
