Name:                   site
Version:                0.0.0
Author:                 Pat Brisbin <pbrisbin@gmail.com>
Maintainer:             Pat Brisbin <pbrisbin@gmail.com>
License:                GPL-2
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      IndexedRoute
                      , Navigation
  Build-Depends:        base            >= 4            && < 5
                      , hakyll          >= 4.6.1.0      && < 4.7
                      , containers
                      , filepath

Executable site
  Default-Language:     Haskell2010
  Main-Is:              main.hs
  GHC-Options:          -Wall
  Build-Depends:        base
                      , site
                      , hakyll          >= 4.6.1.0      && < 4.7
                      , binary
                      , blaze-html
                      , blaze-markup
                      , text
                      , xml-conduit

Source-Repository head
  Type:                 git
  Location:             https://github.com/pbrisbin/pbrisbin.com
