Name:                   site
Version:                0.0.0
Author:                 Pat Brisbin <pbrisbin@gmail.com>
Maintainer:             Pat Brisbin <pbrisbin@gmail.com>
License:                GPL-2
License-File:           LICENSE
Cabal-Version:          >= 1.10
Build-Type:             Simple

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      IndexedRoute
                      , Navigation
  Build-Depends:        base >= 4.8 && < 5
                      , hakyll
                      , containers
                      , filepath

Executable site
  Default-Language:     Haskell2010
  Main-Is:              main.hs
  GHC-Options:          -Wall
  Build-Depends:        base
                      , site
                      , hakyll
                      , binary
                      , blaze-html
                      , blaze-markup
                      , text
                      , xml-conduit

Source-Repository head
  Type:                 git
  Location:             https://github.com/pbrisbin/pbrisbin.com
